fix timer jump on mobile

--- a/src/styles/components/_archive.scss
+++ b/src/styles/components/_archive.scss
@@ -25,7 +25,7 @@
   left: 110px;
   z-index: 1000;
   background-color: var(--background-archive);
-  padding: 1rem;
+  padding: 1.5rem 1rem 1rem;
   border-radius: 5px;
   box-shadow: 1px 1px 5px 1px var(--shadow-column);
   font-size: 1.4rem;
@@ -40,6 +40,7 @@
   }
   @include respond(mobile) {
     font-size: 1rem;
+    padding: 1.5rem 0.5rem 0.5rem;
   }
 
   &__table {
@@ -55,7 +56,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    padding: 1px 2px 0 2px;
+    padding: 1px 3px;
     font-size: 1.2rem;
     color: var(--text-color);
     border-radius: 0 5px 0 5px;
