--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -12,6 +12,7 @@
 
     @include respond(mobile) {
       min-width: auto;
+      padding: 2rem 0 0 0;
     }
   }
 
